<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.anchitchawla.quizapp.MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wel"
        style="@style/custom"
        android:id="@+id/wel"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/questionnum"
        android:layout_marginTop="5dp"
        style="@style/custom"
        android:id="@+id/num1"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ques1"
        style="@style/custom1"
        android:id="@+id/q1"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/q11">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ques1a"
            style="@style/custom1"
            android:id="@+id/q1a"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ques1b"
            style="@style/custom1"
            android:id="@+id/q1b"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ques1c"
            style="@style/custom1"
            android:id="@+id/q1c"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ques1d"
            style="@style/custom1"
            android:id="@+id/q1d"/>
    </RadioGroup>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/custom"
        android:id="@+id/num2"
        android:text="@string/quesnum"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/custom1"
        android:text="@string/ques2"
        android:id="@+id/q2"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/q22">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ques2a"
            style="@style/custom1"
            android:id="@+id/q2a"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ques2b"
            style="@style/custom1"
            android:id="@+id/q2b"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ques2c"
            style="@style/custom1"
            android:id="@+id/q2c"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ques2d"
            style="@style/custom1"
            android:id="@+id/q2d"
            />
    </RadioGroup>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ques3num"
        style="@style/custom"
         android:id="@+id/num3"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ques3"
        style="@style/custom1"
        android:id="@+id/q3"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Write your answer here"
        android:id="@+id/et"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ques4num"
        style="@style/custom"
        android:id="@+id/num4"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ques4"
        style="@style/custom1"
        android:id="@+id/q4"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/q44">
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ques4a"
        style="@style/custom1"
        android:id="@+id/q4a"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ques4b"
            style="@style/custom1"
            android:id="@+id/q4b"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ques4c"
            style="@style/custom1"
            android:id="@+id/q4c"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ques4d"
            style="@style/custom1"
            android:id="@+id/q4d"/>
    </RadioGroup>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ques5num"
        style="@style/custom"
        android:id="@+id/num5"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ques5"
        style="@style/custom1"
        android:id="@+id/q5"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ques5a"
        style="@style/custom1"
        android:id="@+id/c1"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ques5b"
        style="@style/custom1"
        android:id="@+id/c2"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ques5c"
        style="@style/custom1"
        android:id="@+id/c3"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ques5d"
        style="@style/custom1"
        android:id="@+id/c4"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ques5e"
        style="@style/custom1"
        android:id="@+id/c5"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:onClick="res"
        />
</LinearLayout>
</ScrollView>
